added quantity for chemical user-search

--- a/user-search.html
+++ b/user-search.html
@@ -153,156 +153,13 @@
             <img class="card-img-top" src="./resource/img/formaldehyde.jpg" alt="formaldehyde">
             <div class="card-body">
             <h5 class="card-text">Formaldehyde (37%)</h5>
-            <h5 class="card-text stock-text">Stock: 36 ml</h5>
+            <div class="stock-info-container">
+            <h5 class="card-text stock-text">Stock: 36
+            <h5 class="card-text stock-text">Quantity: 25</h5>
+            </div>
             <div class="info">
             <button class="btn-view" data-type="chemical"
             data-name="Formaldehyde (99%)"
-            data-stock="36 ml"
-            data-image="./resource/img/formaldehyde.jpg"
-            >View Product</button>
-            </div>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
-            <div class="card-body">
-            <h5 class="card-text">Hydrochloric Acid (99%)</h5>
-            <h5 class="card-text stock-text">Stock: 36 ml</h5>
-            <div class="info">
-            <button class="btn-view" data-type="equipment"
-            data-name="Hydrochloric Acid (99%)"
-            data-stock="36 ml"
-            data-image="./resource/img/hydrochloric-acid.jpg"
-            >View Product</button>
-            </div>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <img class="card-img-top" src="./resource/img/formaldehyde.jpg" alt="formaldehyde">
-            <div class="card-body">
-            <h5 class="card-text">Formaldehyde (37%)</h5>
-            <h5 class="card-text stock-text">Stock: 36 ml</h5>
-            <div class="info">
-            <button class="btn-view" data-type="chemical"
-            data-name="Hydrochloric Acid (99%)"
-            data-stock="36 ml"
-            data-image="./resource/img/formaldehyde.jpg"
-            >View Product</button>
-            </div>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-            <div class="card-body">
-            <h5 class="card-text">Ethanol (99%)</h5>
-            <h5 class="card-text stock-text">Stock: 36 ml</h5>
-            <div class="info">
-            <button class="btn-view" data-type="chemical"
-            data-name="Hydrochloric Acid (99%)"
-            data-stock="36 ml"
-            data-image="./resource/img/formaldehyde.jpg"
-            >View Product</button>
-            </div>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
-            <div class="card-body">
-            <h5 class="card-text">Hydrochloric Acid (37%)</h5>
-            <h5 class="card-text stock-text">Stock: 36 ml</h5>
-            <div class="info">
-            <button class="btn-view" data-type="equipment"
-            data-name="Hydrochloric Acid (99%)"
-            data-stock="36 ml"
-            data-image="./resource/img/formaldehyde.jpg"
-            >View Product</button>
-            </div>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-            <div class="card-body">
-            <h5 class="card-text">Ethanol (99%)</h5>
-            <h5 class="card-text stock-text">Stock: 36 ml</h5>
-            <div class="info">
-            <button class="btn-view" data-type="equipment"
-            data-name="Hydrochloric Acid (99%)"
-            data-stock="36 ml"
-            data-image="./resource/img/formaldehyde.jpg"
-            >View Product</button>
-            </div>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
-            <div class="card-body">
-            <h5 class="card-text">Hydrochloric Acid (37%)</h5>
-            <h5 class="card-text stock-text">Stock: 36 ml</h5>
-            <div class="info">
-            <button class="btn-view" data-type="equipment"
-            data-name="Hydrochloric Acid (99%)"
-            data-stock="36 ml"
-            data-image="./resource/img/formaldehyde.jpg"
-            >View Product</button>
-            </div>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-            <div class="card-body">
-            <h5 class="card-text">Ethanol (99%)</h5>
-            <h5 class="card-text stock-text">Stock: 36 ml</h5>
-            <div class="info">
-            <button class="btn-view" data-type="equipment"
-            data-name="Hydrochloric Acid (99%)"
-            data-stock="36 ml"
-            data-image="./resource/img/formaldehyde.jpg"
-            >View Product</button>
-            </div>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-        <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-        <div class="card-body">
-            <h5 class="card-text">Ethanol (99%)</h5>
-            <h5 class="card-text stock-text">Stock: 36 ml</h5>
-            <div class="info">
-            <button class="btn-view"
-            data-type="chemical"
-            data-name="Hydrochloric Acid (99%)"
-            data-stock="36 ml"
-            data-image="./resource/img/formaldehyde.jpg"
-            >View Product</button>
-            </div>
-        </div>
-    </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-        <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-        <div class="card-body">
-            <h5 class="card-text">Ethanol (99%)</h5>
-            <h5 class="card-text stock-text">Stock: 36 ml</h5>
-            <div class="info">
-            <button class="btn-view"
-            data-type="equipment"
-            data-name="Hydrochloric Acid (99%)"
             data-stock="36 ml"
             data-image="./resource/img/formaldehyde.jpg"
             >View Product</button>
@@ -366,9 +223,19 @@
                     <h5 class="chemical-title"></h5>
                     <h5 class="chemical-title chem-title">Chemical</h5>
                 </div>
-                <span class="stock-info">Stock: 5 ml</span>
+                <div class="stock-quantity-group">
+                  <span class="stock-info">Stock: 5</span>
+                  <span class="stock-info">Quantity: 5</span>
+                </div>
             </div>
-          </div>
+
+            <!-- Quantity Editor added here -->
+            <div class="quantity-control-container">
+                <button class="quantity-btn" id="chemical-decrement-btn">-</button>
+                <input type="number" class="quantity-input" id="chemical-quantity-input" value="1" min="1">
+                <button class="quantity-btn" id="chemical-increment-btn">+</button>
+            </div>
+        </div>
         <div class="request-button-container">
             <button class="request-button">Request</button>
         </div>
@@ -388,6 +255,7 @@
     </div>
 </footer>
 
+<!-- bubble nav -->
 <input type="checkbox" class="nav--checkbox" id="nav-toggle">
 
 <label for="nav-toggle" class="nav--button">
