added on user-page main class

--- a/user-search.html
+++ b/user-search.html
@@ -126,7 +126,7 @@
 </nav>
 
 <!-- main content for user page-->
-<main class="user-page content">
+<main class="user-page content d-flex flex-column min-vh-100">
 <div class="container-fluid">
     <div class="row row-cols-1 row-cols-md-4 row-cols-lg-4 g-3">
     <div class="col">
