--- a/equipment.html
+++ b/equipment.html
@@ -68,10 +68,10 @@
                 <label for="name" class="form-label">Name of Instructor or Graduate Student:</label>
                 <input type="text" class="form-control" id="name" placeholder="Enter name">
             </div>
-            <div class="col-md">
+            <!-- <div class="col-md">
                 <label for="signature" class="form-label">Attach Signature:</label>
                 <input type="file" class="form-control" id="signature">
-            </div>
+            </div> -->
             <div class="col-md">
                 <label for="subject" class="form-label">Subject:</label>
                 <input type="text" class="form-control" id="subject" placeholder="Enter subject">
