--- a/faculty-history.html
+++ b/faculty-history.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home for Admin</title>
+    <title>Faculty History</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css"  href="resource/css/home-admin.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,9 +67,9 @@
 
 
 <!-- main content -->
-<main class="home-admin">
+<main class="faculty-history">
     <div class="container">
-      <h2 class="requests-heading">Requests</h2>
+      <h2 class="requests-heading">Request History</h2>
       <div class="filter-buttons">
             <button class="filter-btn active">ALL</button>
             <button class="filter-btn">Faculty Approved</button>
@@ -93,8 +93,9 @@
                           <div class="request-timestamp">
                             <span class="timestamp-text">08/31/2025 - 7:00PM</span>
                         </div>
-                        <div class="view-button-container">
-                          <button class="view-button-btn">View</button>
+                        <div class="history-button-container">
+                          <button class="cancel-button">Cancel</button>
+                          <button class="view-button">View</button>
                         </div>
                       </div>
                     </div>
@@ -114,7 +115,8 @@
                             <span class="timestamp-text">08/31/2025 - 7:00PM</span>
                         </div>
                         <div class="view-button-container">
-                          <button class="view-button-btn">View</button>
+                          <button class="cancel-button">Cancel</button>
+                          <button class="view-button">View</button>
                         </div>
                       </div>
                     </div>
@@ -134,7 +136,8 @@
                             <span class="timestamp-text">08/31/2025 - 7:00PM</span>
                         </div>
                         <div class="view-button-container">
-                          <button class="view-button-btn">View</button>
+                          <button class="cancel-button">Cancel</button>
+                          <button class="view-button">View</button>
                         </div>
                       </div>
                     </div>
