added delete and cancel button

--- a/admin-search.html
+++ b/admin-search.html
@@ -198,7 +198,8 @@
       </div>
     </div>
     <div class="edit-button-container">
-      <button class="request-button edit-button">Edit</button>
+      <button class="edit-button">Edit</button>
+      <button class="delete-button">Delete</button>
     </div>
   </div>
 </div>
@@ -219,7 +220,8 @@
             </div>
         </div>
         <div class="edit-button-container">
-          <button class="request-button edit-button">Edit</button>
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">Delete</button>
         </div>
     </div>
 </div>
@@ -234,7 +236,8 @@
       <label for="edit-equipment-stock">Stock:</label>
       <input type="number" id="edit-equipment-stock" name="edit-equipment-stock">
       <div class="button-container">
-        <button type="submit" class="save-btn">Save Changes</button>
+        <button type="submit" class="save-btn">Save</button>
+        <button type="submit" class="save-btn">Cancel</button>
       </div>
     </form>
   </div>
@@ -257,7 +260,8 @@
         </select>
       </div>
       <div class="button-container">
-        <button type="submit" class="save-btn">Save Changes</button>
+        <button type="submit" class="save-btn">Save</button>
+        <button type="submit" class="save-btn">Cancel</button>
        </div>
       </form>
     </div>
