--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </nav>
 
 <!-- home -->
-<section class="home">
+<main class="home">
     <div class="container-fluid">
         <div class="row row-no-gutters align-items-center">
             <div class="col-12 col-md-6 col-lg-5">
@@ -129,16 +129,14 @@
                 </div>
             </div>
         </div>
-
-        
     </div>
-</section>
-    <!-- home -->
+  </main>
+<!-- home -->
 
 <!-- footer -->
 <footer>
   <div class="container-fluid">
-    <p class="text-center text-white pt-2"><small>
+    <p class="text-center text-white mb-0"><small>
       CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
       <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
       Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
