--- a/order-details.html
+++ b/order-details.html
@@ -109,22 +109,25 @@
                                 <button type="submit" class="btn finalize-btn ms-3" name="cancel-btn">Cancel</button>
                             </div>
                         </div>
-                        </form>
-                      </div>
-                    </div>
-                  </div>
+                    </form>
                 </div>
-              </main>
-
-
-              <footer><div class="container-fluid">
-                <p class="text-center text-white pt-2"><small>
-                    CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
-                    <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
-                    Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
-                </small>
-            </p>
+            </div>
         </div>
-    </footer>
+    </div>
+</main>
+
+
+<footer>
+  <div class="container-fluid">
+    <p class="text-center text-white pt-2">
+      <small>CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
+      <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
+      Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
+      </small>
+    </p>
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
