edited equipment html

--- a/equipment.html
+++ b/equipment.html
@@ -57,68 +57,67 @@
     </div>
 </nav>
 
- <main class="equipment-page">
-        <div class="container-fluid py-5">
-            <div class="row justify-content-center">
-                <div class="col-lg-8 col-md-10">
-                    <div class="request-form-card">
-                        <form method="post" action="">
-                          <div class="row mb-3 align-items-end">
-                            <div class="col-md-5">
-                                <label for="name" class="form-label">Name of Instructor or Graduate Student:</label>
-                                <input type="text" class="form-control" id="name" name="prof_name" placeholder="Enter name" required>
-                            </div>
-                            <div class="col-md-4">
-                                <label for="subject" class="form-label">Subject:</label>
-                                <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter subject" required>
-                            </div>
-                            <div class="col-md-3">
-                                <label for="room" class="form-label">Room:</label>
-                                <input type="text" class="form-control" id="room" name="room" placeholder="Enter Room" required>
-                            </div>
-                        </div>
-                            
-                        <div class="row mb-4 align-items-end">
-                            <div class="col-md-3">
-                                <label for="date-from" class="form-label">Date of Use (From):</label>
-                                <input type="date" class="form-control" id="date-from" name="date_from" required>
-                            </div>
-                            <div class="col-md-3">
-                                <label for="date-to" class="form-label">To (Disregard if one day use):</label>
-                                <input type="date" class="form-control" id="date-to" name="date_to">
-                            </div>
-                            <div class="col-md-2">
-                                <label for="time-from" class="form-label">Time (From):</label>
-                                <input type="time" class="form-control" id="time-from" name="time_from" required>
-                            </div>
-                            <div class="col-md-2">
-                                <label for="time-to" class="form-label">Time (To):</label>
-                                <input type="time" class="form-control" id="time-to" name="time_to" required>
-                            </div>
-                          </div>
-                          <h4 class="request-details-title mt-4 mb-3">Request Details:</h4>
-                          <div id="request-list-container">
-                            <div class="request-item-card d-flex align-items-center mb-3">
-                              <div class="item-details-simple flex-grow-1">
-                                <h5 class="item-name mb-0"></h5>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="d-flex justify-content-end mt-4">
-                            <button type="submit" class="btn finalize-btn" name="finalize-btn">Finalize Request</button>
-                          </div>
-                        </form>
-                      </div>
-                    </div>
-                  </div>
+<main class="equipment-page">
+  <div class="container-fluid py-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 col-md-10">
+        <div class="request-form-card">
+          <form method="post" action="">
+            <div class="row mb-3 align-items-end">
+              <div class="col-md-5">
+                <label for="name" class="form-label">Name of Instructor or Graduate Student:</label>
+                <input type="text" class="form-control" id="name" name="prof_name" placeholder="Enter name" required>
+              </div>
+              <div class="col-md-4">
+                <label for="subject" class="form-label">Subject:</label>
+                <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter subject" required>
+              </div>
+              <div class="col-md-3">
+                <label for="room" class="form-label">Room:</label>
+                <input type="text" class="form-control" id="room" name="room" placeholder="Enter Room" required>
+              </div>
+            </div>
+            <div class="row mb-4 align-items-end">
+              <div class="col-md-3">
+                <label for="date-from" class="form-label">Date of Use (From):</label>
+                <input type="date" class="form-control" id="date-from" name="date_from" required>
+              </div>
+              <div class="col-md-3">
+                <label for="date-to" class="form-label">To (Disregard if one day use):</label>
+                <input type="date" class="form-control" id="date-to" name="date_to">
+              </div>
+              <div class="col-md-2">
+                <label for="time-from" class="form-label">Time (From):</label>
+                <input type="time" class="form-control" id="time-from" name="time_from" required>
+              </div>
+              <div class="col-md-2">
+                <label for="time-to" class="form-label">Time (To):</label>
+                <input type="time" class="form-control" id="time-to" name="time_to" required>
+              </div>
+            </div>
+            <h4 class="request-details-title mt-4 mb-3">Request Details:</h4>
+            <div id="request-list-container">
+              <div class="request-item-card d-flex align-items-center mb-3">
+                <div class="item-details-simple flex-grow-1">
+                  <h5 class="item-name mb-0"></h5>
                 </div>
-              </main>
+              </div>
+            </div>
+            <div class="d-flex justify-content-end mt-4">
+              <button type="submit" class="btn finalize-btn" name="finalize-btn">Finalize Request</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
 
 
 <footer>
   <div class="container-fluid">
-    <p class="text-center text-white pt-2"><small>
-      CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
+    <p class="text-center text-white pt-2">
+      <small>CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
       <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
       Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
       </small>
