added new file for user and added remarks section for both user and admin

--- a/admin-search.html
+++ b/admin-search.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search for Admin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css"  href="resource/css/search.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bona+Nova:ital,wght@0,400;0,700;1,400&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ruda:wght@400..900&family=Tilt+Warp&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/6563a04357.js" crossorigin="anonymous"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Search for Admin</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="resource/css/search.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bona+Nova:ital,wght@0,400;0,700;1,400&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ruda:wght@400..900&family=Tilt+Warp&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/6563a04357.js" crossorigin="anonymous"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
 </head>
+
 <body>
 
- <!-- 1st nav -->
-<!-- <nav class="navbar navbar-expand-lg">
+  <!-- 1st nav -->
+  <!-- <nav class="navbar navbar-expand-lg">
   <a class="navbar-brand" href="#">
     <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png" alt="CEU Molecules Logo"/>
   </a>
@@ -67,109 +72,107 @@
 
 
 
-<!-- 2nd nav -->
-<nav class="sidebar close">
-  <header>
-    <div class="toggle-container">
-      <i class="fa-solid fa-angle-right toggle"></i>
-    </div>
-  </header>
+  <!-- 2nd nav -->
+  <nav class="sidebar close">
+    <header>
+      <div class="toggle-container">
+        <i class="fa-solid fa-angle-right toggle"></i>
+      </div>
+    </header>
 
-  <div class="menu-bar">
+    <div class="menu-bar">
       <ul class="menu-links">
-      <li class="search-box">
+        <li class="search-box">
           <i class="fa-solid fa-magnifying-glass icon"></i>
           <input type="search" placeholder=" Search..." class="search-input">
-      </li>
-      <li class="nav-links chemicals-btn">
-        <a href="#">
-          <i class="fa-solid fa-flask icon"></i>
-          <span class="text nav-text">Chemicals</span>
-        </a>
-      </li>
-      <li class="nav-links chemicals-btn">
-        <a href="#">
-          <i class="fa-solid fa-prescription-bottle icon"></i>
-          <span class="text nav-text">Supplies</span>
-        </a>
-      </li>
-      <li class="nav-links chemicals-btn">
-        <a href="#">
-          <i class="fa-solid fa-diagram-project  icon"></i>
-          <span class="text nav-text">Model/Charts</span>
-        </a>
-      </li>
-      <li class="nav-links chemicals-btn">
-        <a href="#">
-          <i class="fa-solid fa-microscope icon"></i>
-          <span class="text nav-text">Equipments</span>
-        </a>
-      </li>
-      <li class="nav-links chemicals-btn">
-        <a href="#">
-          <i class="fa-solid fa-vial icon"></i>
-          <span class="text nav-text">Specimens</span>
-        </a>
-      </li>
-      <li class="nav-links chemicals-btn">
-        <a href="#">
-          <i class="fa-solid fa-ellipsis icon"></i>
-          <span class="text nav-text">Others</span>
-        </a>
-      </li>
-    </ul>
+        </li>
+        <li class="nav-links chemicals-btn">
+          <a href="#">
+            <i class="fa-solid fa-flask icon"></i>
+            <span class="text nav-text">Chemicals</span>
+          </a>
+        </li>
+        <li class="nav-links chemicals-btn">
+          <a href="#">
+            <i class="fa-solid fa-prescription-bottle icon"></i>
+            <span class="text nav-text">Supplies</span>
+          </a>
+        </li>
+        <li class="nav-links chemicals-btn">
+          <a href="#">
+            <i class="fa-solid fa-diagram-project  icon"></i>
+            <span class="text nav-text">Model/Charts</span>
+          </a>
+        </li>
+        <li class="nav-links chemicals-btn">
+          <a href="#">
+            <i class="fa-solid fa-microscope icon"></i>
+            <span class="text nav-text">Equipments</span>
+          </a>
+        </li>
+        <li class="nav-links chemicals-btn">
+          <a href="#">
+            <i class="fa-solid fa-vial icon"></i>
+            <span class="text nav-text">Specimens</span>
+          </a>
+        </li>
+        <li class="nav-links chemicals-btn">
+          <a href="#">
+            <i class="fa-solid fa-ellipsis icon"></i>
+            <span class="text nav-text">Others</span>
+          </a>
+        </li>
+      </ul>
 
-    <div class="bottom-content">
-  <li class="nav-links">
-    <a href="#">
-      <i class="fa-solid fa-arrow-right-from-bracket icon"></i>
-      <span class="text nav-text">Logout</span>
-    </a>
-  </li>
-</div>
-</div>
-</nav>
+      <div class="bottom-content">
+        <li class="nav-links">
+          <a href="#">
+            <i class="fa-solid fa-arrow-right-from-bracket icon"></i>
+            <span class="text nav-text">Logout</span>
+          </a>
+        </li>
+      </div>
+    </div>
+  </nav>
 
-<!-- main content for admin page-->
-<main class="admin-page content d-flex flex-column min-vh-100">
-<div class="container-fluid">
-  <div class="row row-cols-1 row-cols-md-4 row-cols-lg-4 g-3">
-  <div class="col">
-      <div class="card h-100">
-      <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-      <div class="card-body">
-        <h5 class="card-text">Ethanol (99%)</h5>
-        <h5 class="card-text stock-text">Stock: 36 ml</h5>
-        <div class="info">
-          <button class="btn-view"
-          data-type="equipment"
-          data-image="./resource/img/hydrochloric-acid.jpg">Edit Product
-          <i class="fa-solid fa-pencil"></i>
-        </button>
+  <!-- main content for admin page-->
+  <main class="admin-page content d-flex flex-column min-vh-100">
+    <div class="container-fluid">
+      <div class="row row-cols-1 row-cols-md-4 row-cols-lg-4 g-3">
+        <div class="col">
+          <div class="card h-100">
+            <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+            <div class="card-body">
+              <h5 class="card-text">Ethanol (99%)</h5>
+              <h5 class="card-text stock-text">Stock: 36 ml</h5>
+              <div class="info">
+                <button class="btn-view" data-type="equipment" data-image="./resource/img/hydrochloric-acid.jpg">Edit
+                  Product
+                  <i class="fa-solid fa-pencil"></i>
+                </button>
 
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img class="card-img-top" src="./resource/img/formaldehyde.jpg" alt="formaldehyde">
+            <div class="card-body">
+              <h5 class="card-text">Formaldehyde (37%)</h5>
+              <h5 class="card-text stock-text">Stock: 36 ml</h5>
+              <div class="info">
+                <button class="btn-view" data-type="chemical" data-image="./resource/img/formaldehyde.jpg">Edit Product
+                  <i class="fa-solid fa-pencil"></i>
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img class="card-img-top" src="./resource/img/formaldehyde.jpg" alt="formaldehyde">
-      <div class="card-body">
-        <h5 class="card-text">Formaldehyde (37%)</h5>
-        <h5 class="card-text stock-text">Stock: 36 ml</h5>
-        <div class="info">
-          <button class="btn-view" data-type="chemical"
-          data-image="./resource/img/formaldehyde.jpg"
-          >Edit Product
-          <i class="fa-solid fa-pencil"></i>
-        </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
 </body>
+
 </html>
 </main>
 
@@ -205,25 +208,25 @@
 </div>
 
 <div id="chemical-popup" class="product-popup">
-    <div class="popup-content">
-        <button class="close-btn">&times;</button>
-        <div class="popup-image-container">
-            <img class="popup-image" src="./resource/img/hydrochloric-acid.jpg" alt="Hydrochloric Acid">
-        </div>
-        <div class="popup-details">
-            <div class="chemical-info-header">
-                <div class="chemical-titles">
-                    <h5 class="chemical-title">Hydrochloric Acid</h5>
-                    <h5 class="chemical-title chem-title">Chemical</h5>
-                </div>
-                <span class="stock-info">Stock: 5 ml</span>
-            </div>
-        </div>
-        <div class="edit-button-container">
-          <button class="edit-button">Edit</button>
-          <button class="delete-button">Delete</button>
-        </div>
+  <div class="popup-content">
+    <button class="close-btn">&times;</button>
+    <div class="popup-image-container">
+      <img class="popup-image" src="./resource/img/hydrochloric-acid.jpg" alt="Hydrochloric Acid">
     </div>
+    <div class="popup-details">
+      <div class="chemical-info-header">
+        <div class="chemical-titles">
+          <h5 class="chemical-title">Hydrochloric Acid</h5>
+          <h5 class="chemical-title chem-title">Chemical</h5>
+        </div>
+        <span class="stock-info">Stock: 5 ml</span>
+      </div>
+    </div>
+    <div class="edit-button-container">
+      <button class="edit-button">Edit</button>
+      <button class="delete-button">Delete</button>
+    </div>
+  </div>
 </div>
 
 <div id="edit-equipment-popup" class="edit-popup">
@@ -253,8 +256,8 @@
       <label for="edit-chemical-stock">Stock:</label>
       <div class="stock-input-group">
         <input type="number" id="edit-chemical-stock" name="edit-chemical-stock">
-         <select id="edit-chemical-stock-unit" name="edit-chemical-stock-unit">
-          <option value="" selected disabled>Select Unit</option> 
+        <select id="edit-chemical-stock-unit" name="edit-chemical-stock-unit">
+          <option value="" selected disabled>Select Unit</option>
           <option value="ml">ml</option>
           <option value="l">l</option>
         </select>
@@ -262,18 +265,20 @@
       <div class="button-container">
         <button type="submit" class="save-btn">Save</button>
         <button type="submit" class="save-btn">Cancel</button>
-       </div>
-      </form>
-    </div>
+      </div>
+    </form>
+  </div>
 </div>
 
 <!-- footer -->
 <footer>
   <div class="container-fluid">
     <p class="text-center text-white pt-2"><small>
-      CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
-      <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
-      Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
+        CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
+        <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical
+          Laboratory</strong><br>
+        Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva
+          (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
       </small>
     </p>
   </div>
@@ -296,10 +301,12 @@
 <div class="nav--small nav--btn-3">
   <a href="#"><i class="fa-solid fa-rectangle-list"></i></a>
 </div>
-    
+
 </body>
+
 </html>
-    
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
 <script src="resource/js/script.js"></script>
